# code-scan-agent

./: .gitignore  INTELLIGENT_SCANNING_IMPLEMENTATION.md  INTELLIGENT_WORKFLOWS_IMPLEMENTATION.md  LICENSE  README.md  README_REFACTOR.md  demo.py  demo_intelligent_scanning.py  demo_intelligent_workflows.py  pyproject.toml  quick_start.sh  run_agent.py  setup.py  test_full_mcp.py
code_scan_agent/: __init__.py  agent.py  config.py  custom_rules.yaml  errors.py  intelligent_agents.py  intelligent_scanner.py  intelligent_workflows.py  output_formatter.py  semgrep_client.py  serialization_utils.py
code_scan_agent/intelligent/: __init__.py  agents.py  context.py  scanner.py  workflow_agents.py  workflows.py
examples/: test_secrets.py  test_vulnerable.py  vulnerable_code.py
tests/: __init__.py  test_agent.py  test_error_handling.py
