[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-scan-agent"
version = "0.1.0"
description = "AI-powered code security scanning tool using Google ADK and Semgrep MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Code Scan Agent", email = "contact@example.com" },
]
keywords = ["security", "code-analysis", "vulnerability-scanner", "semgrep", "ai", "google-adk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "google-adk>=1.3.0",
    "python-dotenv>=1.0.0",
    "typing-extensions",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
